resources/patterns/index.html: changed the <li>'s to <div>'s

--- a/resources/patterns/index.html
+++ b/resources/patterns/index.html
@@ -5,64 +5,67 @@
 <div class="heading">Resources - Patterns</div>
 <div class="subtitle">Included With The GIMP</div>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
-<ul>
-<li style="list-style-image: url(3D_Green.png);">3D Green</li>
-<li style="list-style-image: url(Amethyst.png);">Amethyst</li>
-<li style="list-style-image: url(Big_Blue.png);">Big Blue</li>
-<li style="list-style-image: url(Blue_Grid.png);">Blue Grid</li>
-<li style="list-style-image: url(Blue_Squares.png);">Blue Squares</li>
-<li style="list-style-image: url(Blue_Web.png);">Blue Web</li>
-<li style="list-style-image: url(Bricks.png);">Bricks</li>
-<li style="list-style-image: url(Burlap.png);">Burlap</li>
-<li style="list-style-image: url(Burlwood.png);">Burlwood</li>
-<li style="list-style-image: url(Chocolate_Swirl.png);">Chocolate Swirl</li>
-<li style="list-style-image: url(Cork_board.png);">Cork board</li>
-<li style="list-style-image: url(Crack.png);">Crack</li>
-<li style="list-style-image: url(Craters.png);">Craters</li>
-<li style="list-style-image: url(Crinkled_Paper.png);">Crinkled Paper</li>
-<li style="list-style-image: url(Dried_mud.png);">Dried mud</li>
-<li style="list-style-image: url(Electric_Blue.png);">Electric Blue</li>
-<li style="list-style-image: url(Fibers.png);">Fibers</li>
-<li style="list-style-image: url(Granite_1.png);">Granite #1</li>
-<li style="list-style-image: url(Ice.png);">Ice</li>
-<li style="list-style-image: url(Java.png);">Java</li>
-<li style="list-style-image: url(Leather.png);">Leather</li>
-<li style="list-style-image: url(Leopard.png);">Leopard</li>
-<li style="list-style-image: url(Lightning.png);">Lightning</li>
-<li style="list-style-image: url(Maple_Leaves.png);">Maple Leaves</li>
-<li style="list-style-image: url(Marble_1.png);">Marble #1</li>
-<li style="list-style-image: url(Marble_2.png);">Marble #2</li>
-<li style="list-style-image: url(Marble_3.png);">Marble #3</li>
-<li style="list-style-image: url(Nops.png);">Nops</li>
-</ul><ul>
-<li style="list-style-image: url(One_Small_Step....png);">One Small Step...</li>
-<li style="list-style-image: url(Paper.png);">Paper</li>
-<li style="list-style-image: url(Parque_1.png);">Parque #1</li>
-<li style="list-style-image: url(Parque_2.png);">Parque #2</li>
-<li style="list-style-image: url(Parque_3.png);">Parque #3</li>
-<li style="list-style-image: url(Pastel_Stuff.png);">Pastel Stuff</li>
-<li style="list-style-image: url(Pine.png);">Pine</li>
-<li style="list-style-image: url(Pine?.png);">Pine?</li>
-<li style="list-style-image: url(Pink_Marble.png);">Pink Marble</li>
-<li style="list-style-image: url(Pool_Bottom.png);">Pool Bottom</li>
-<li style="list-style-image: url(Qbert.png);">Qbert</li>
-<li style="list-style-image: url(Rain.png);">Rain</li>
-<li style="list-style-image: url(Red_Cubes.png);">Red Cubes</li>
-<li style="list-style-image: url(Rocks.png);">Rocks</li>
-<li style="list-style-image: url(Sky.png);">Sky</li>
-<li style="list-style-image: url(Slate.png);">Slate</li>
-<li style="list-style-image: url(Small_Squares.png);">Small Squares</li>
-<li style="list-style-image: url(Starfield.png);">Starfield</li>
-<li style="list-style-image: url(Stone.png);">Stone</li>
-<li style="list-style-image: url(Terra.png);">Terra</li>
-<li style="list-style-image: url(Tree_Bark.png);">Tree Bark</li>
-<li style="list-style-image: url(Walnut.png);">Walnut</li>
-<li style="list-style-image: url(Warning.png);">Warning!</li>
-<li style="list-style-image: url(Wood.png);">Wood</li>
-<li style="list-style-image: url(Wood_1.png);">Wood #1</li>
-<li style="list-style-image: url(Wood_2.png);">Wood #2</li>
-<li style="list-style-image: url(Wood_of_some_sort.png);">Wood of some sort</li>
-<li style="list-style-image: url(recessed.png);">recessed</li>
-</ul>
+<div>this is the beginning</div>
+<div><img src="3D_Green.png" width="32" height="32" alt="pattern sample"><p>3D Green</p></div>
+<div><img src="Amethyst.png" width="32" height="32" alt="pattern sample"><p>Amethyst</p></div>
+<div><img src="Big_Blue.png" width="32" height="32" alt="pattern sample"><p>Big Blue</p></div>
+<div><img src="Blue_Grid.png" width="32" height="32" alt="pattern sample"><p>Blue Grid</p></div>
+<div><img src="Blue_Squares.png" width="32" height="32" alt="pattern sample"><p>Blue Squares</p></div>
+<div><img src="Blue_Web.png" width="32" height="32" alt="pattern sample"><p>Blue Web</p></div>
+<div><img src="Bricks.png" width="32" height="32" alt="pattern sample"><p>Bricks</p></div>
+<div><img src="Burlap.png" width="32" height="32" alt="pattern sample"><p>Burlap</p></div>
+<div><img src="Burlwood.png" width="32" height="32" alt="pattern sample"><p>Burlwood</p></div>
+<div><img src="Chocolate_Swirl.png" width="32" height="32" alt="pattern sample"><p>Chocolate Swirl</p></div>
+<div><img src="Cork_board.png" width="32" height="32" alt="pattern sample"><p>Cork board</p></div>
+<div><img src="Crack.png" width="32" height="32" alt="pattern sample"><p>Crack</p></div>
+<div><img src="Craters.png" width="32" height="32" alt="pattern sample"><p>Craters</p></div>
+<div><img src="Crinkled_Paper.png" width="32" height="32" alt="pattern sample"><p>Crinkled Paper</p></div>
+<div><img src="Dried_mud.png" width="32" height="32" alt="pattern sample"><p>Dried mud</p></div>
+<div><img src="Electric_Blue.png" width="32" height="32" alt="pattern sample"><p>Electric Blue</p></div>
+<div><img src="Fibers.png" width="32" height="32" alt="pattern sample"><p>Fibers</p></div>
+<div><img src="GIMP_Pattern_--_transparency_lg.png" width="32" height="32" alt="pattern sample"><p>GIMP Pattern -- transparency lg</p></div>
+<div><img src="GIMP_Pattern_--_transparency_med.png" width="32" height="32" alt="pattern sample"><p>GIMP Pattern -- transparency med</p></div>
+<div><img src="GIMP_Pattern_--_transparency_sm.png" width="32" height="32" alt="pattern sample"><p>GIMP Pattern -- transparency sm</p></div>
+<div><img src="Granite_1.png" width="32" height="32" alt="pattern sample"><p>Granite #1</p></div>
+<div><img src="Ice.png" width="32" height="32" alt="pattern sample"><p>Ice</p></div>
+<div><img src="Java.png" width="32" height="32" alt="pattern sample"><p>Java</p></div>
+<div><img src="Leather.png" width="32" height="32" alt="pattern sample"><p>Leather</p></div>
+<div><img src="Leopard.png" width="32" height="32" alt="pattern sample"><p>Leopard</p></div>
+<div><img src="Lightning.png" width="32" height="32" alt="pattern sample"><p>Lightning</p></div>
+<div><img src="Maple_Leaves.png" width="32" height="32" alt="pattern sample"><p>Maple Leaves</p></div>
+<div><img src="Marble_1.png" width="32" height="32" alt="pattern sample"><p>Marble #1</p></div>
+<div><img src="Marble_2.png" width="32" height="32" alt="pattern sample"><p>Marble #2</p></div>
+<div><img src="Marble_3.png" width="32" height="32" alt="pattern sample"><p>Marble #3</p></div>
+<div><p>half way point</p></div>
+<div><img src="Nops.png" width="32" height="32" alt="pattern sample"><p>Nops</p></div>
+<div><img src="One_Small_Step....png" width="32" height="32" alt="pattern sample"><p>One Small Step...</p></div>
+<div><img src="Paper.png" width="32" height="32" alt="pattern sample"><p>Paper</p></div>
+<div><img src="Parque_1.png" width="32" height="32" alt="pattern sample"><p>Parque #1</p></div>
+<div><img src="Parque_2.png" width="32" height="32" alt="pattern sample"><p>Parque #2</p></div>
+<div><img src="Parque_3.png" width="32" height="32" alt="pattern sample"><p>Parque #3</p></div>
+<div><img src="Pastel_Stuff.png" width="32" height="32" alt="pattern sample"><p>Pastel Stuff</p></div>
+<div><img src="Pine.png" width="32" height="32" alt="pattern sample"><p>Pine</p></div>
+<div><img src="Pine?.png" width="32" height="32" alt="pattern sample"><p>Pine?</p></div>
+<div><img src="Pink_Marble.png" width="32" height="32" alt="pattern sample"><p>Pink Marble</p></div>
+<div><img src="Pool_Bottom.png" width="32" height="32" alt="pattern sample"><p>Pool Bottom</p></div>
+<div><img src="Qbert.png" width="32" height="32" alt="pattern sample"><p>Qbert</p></div>
+<div><img src="Rain.png" width="32" height="32" alt="pattern sample"><p>Rain</p></div>
+<div><img src="Red_Cubes.png" width="32" height="32" alt="pattern sample"><p>Red Cubes</p></div>
+<div><img src="Rocks.png" width="32" height="32" alt="pattern sample"><p>Rocks</p></div>
+<div><img src="Sky.png" width="32" height="32" alt="pattern sample"><p>Sky</p></div>
+<div><img src="Slate.png" width="32" height="32" alt="pattern sample"><p>Slate</p></div>
+<div><img src="Small_Squares.png" width="32" height="32" alt="pattern sample"><p>Small Squares</p></div>
+<div><img src="Starfield.png" width="32" height="32" alt="pattern sample"><p>Starfield</p></div>
+<div><img src="Stone.png" width="32" height="32" alt="pattern sample"><p>Stone</p></div>
+<div><img src="Terra.png" width="32" height="32" alt="pattern sample"><p>Terra</p></div>
+<div><img src="Tree_Bark.png" width="32" height="32" alt="pattern sample"><p>Tree Bark</p></div>
+<div><img src="Walnut.png" width="32" height="32" alt="pattern sample"><p>Walnut</p></div>
+<div><img src="Warning.png" width="32" height="32" alt="pattern sample"><p>Warning!</p></div>
+<div><img src="Wood.png" width="32" height="32" alt="pattern sample"><p>Wood</p></div>
+<div><img src="Wood_1.png" width="32" height="32" alt="pattern sample"><p>Wood #1</p></div>
+<div><img src="Wood_2.png" width="32" height="32" alt="pattern sample"><p>Wood #2</p></div>
+<div><img src="Wood_of_some_sort.png" width="32" height="32" alt="pattern sample"><p>Wood of some sort</p></div>
+<div><img src="recessed.png" width="32" height="32" alt="pattern sample"><p>recessed</p></div>
+
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
