ources/brushes/index.html: changed the <li>'s to <div>'s resources/brushes/mgo-brushes.py the script is added

--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -6,56 +6,56 @@
 <div class="heading">Resources</div>
 <div class="subtitle">Included With The GIMP</div>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
-<ul>
-<li style="list-style-image: url(Calligraphic_Brush.png);">Calligraphic Brush</li>
-<li style="list-style-image: url(Calligraphic_Brush2.png);">Calligraphic Brush#2</li>
-<li style="list-style-image: url(Calligraphic_Brush3.png);">Calligraphic Brush#3</li>
-<li style="list-style-image: url(Calligraphic_Brush4.png);">Calligraphic Brush#4</li>
-<li style="list-style-image: url(Circle_01.png);">Circle (01)</li>
-<li style="list-style-image: url(Circle_03.png);">Circle (03)</li>
-<li style="list-style-image: url(Circle_05.png);">Circle (05)</li>
-<li style="list-style-image: url(Circle_07.png);">Circle (07)</li>
-<li style="list-style-image: url(Circle_09.png);">Circle (09)</li>
-<li style="list-style-image: url(Circle_11.png);">Circle (11)</li>
-<li style="list-style-image: url(Circle_13.png);">Circle (13)</li>
-<li style="list-style-image: url(Circle_15.png);">Circle (15)</li>
-<li style="list-style-image: url(Circle_17.png);">Circle (17)</li>
-<li style="list-style-image: url(Circle_19.png);">Circle (19)</li>
-<li style="list-style-image: url(Circle_Fuzzy_03.png);">Circle Fuzzy (03)</li>
-<li style="list-style-image: url(Circle_Fuzzy_05.png);">Circle Fuzzy (05)</li>
-<li style="list-style-image: url(Circle_Fuzzy_07.png);">Circle Fuzzy (07)</li>
-<li style="list-style-image: url(Circle_Fuzzy_09.png);">Circle Fuzzy (09)</li>
-<li style="list-style-image: url(Circle_Fuzzy_11.png);">Circle Fuzzy (11)</li>
-<li style="list-style-image: url(Circle_Fuzzy_13.png);">Circle Fuzzy (13)</li>
-<li style="list-style-image: url(Circle_Fuzzy_15.png);">Circle Fuzzy (15)</li>
-<li style="list-style-image: url(Circle_Fuzzy_17.png);">Circle Fuzzy (17)</li>
-<li style="list-style-image: url(Circle_Fuzzy_19.png);">Circle Fuzzy (19)</li>
-<li style="list-style-image: url(Confetti.png);">Confetti</li>
-</ul><ul>
-<li style="list-style-image: url(Diagonal_Star_11.png);">Diagonal Star (11)</li>
-<li style="list-style-image: url(Diagonal_Star_17.png);">Diagonal Star (17)</li>
-<li style="list-style-image: url(Diagonal_Star_25.png);">Diagonal Star (25)</li>
-<li style="list-style-image: url(Felt_Pen.png);">Felt Pen</li>
-<li style="list-style-image: url(GIMP_Brush.png);">GIMP Brush</li>
-<li style="list-style-image: url(Galaxy_AP.png);">Galaxy (AP)</li>
-<li style="list-style-image: url(Galaxy_Big.png);">Galaxy, Big</li>
-<li style="list-style-image: url(Galaxy_Small_AP.png);">Galaxy, Small (AP)</li>
-<li style="list-style-image: url(Pencil_Sketch.png);">Pencil Sketch</li>
-<li style="list-style-image: url(Pencil_Sketch2.png);">Pencil Sketch#2</li>
-<li style="list-style-image: url(Pencil_Sketch3.png);">Pencil Sketch#3</li>
-<li style="list-style-image: url(Pepper.png);">Pepper</li>
-<li style="list-style-image: url(Property_of_XCF!.png);">Property of XCF!</li>
-<li style="list-style-image: url(Sand_Dunes_AP.png);">Sand Dunes (AP)</li>
-<li style="list-style-image: url(Sparks.png);">Sparks</li>
-<li style="list-style-image: url(Vine.png);">Vine</li>
-<li style="list-style-image: url(animated_Confetti.png);">animated Confetti</li>
-<li style="list-style-image: url(pixel_1x1_square.png);">pixel (1x1 square)</li>
-<li style="list-style-image: url(square_10x10.png);">square (10x10)</li>
-<li style="list-style-image: url(square_10x10_blur.png);">square (10x10) blur</li>
-<li style="list-style-image: url(square_20x20.png);">square (20x20)</li>
-<li style="list-style-image: url(square_20x20_blur.png);">square (20x20) blur</li>
-<li style="list-style-image: url(square_5x5.png);">square (5x5)</li>
-<li style="list-style-image: url(square_5x5_blur.png);">square (5x5) blur</li>
-</ul>
+<div>this is the beginning</div>
+<div><img src="Calligraphic_Brush.png" width="32" height="32" alt="brush sample"><p>Calligraphic Brush</p></div>
+<div><img src="Calligraphic_Brush2.png" width="32" height="32" alt="brush sample"><p>Calligraphic Brush#2</p></div>
+<div><img src="Calligraphic_Brush3.png" width="32" height="32" alt="brush sample"><p>Calligraphic Brush#3</p></div>
+<div><img src="Calligraphic_Brush4.png" width="32" height="32" alt="brush sample"><p>Calligraphic Brush#4</p></div>
+<div><img src="Circle_01.png" width="32" height="32" alt="brush sample"><p>Circle (01)</p></div>
+<div><img src="Circle_03.png" width="32" height="32" alt="brush sample"><p>Circle (03)</p></div>
+<div><img src="Circle_05.png" width="32" height="32" alt="brush sample"><p>Circle (05)</p></div>
+<div><img src="Circle_07.png" width="32" height="32" alt="brush sample"><p>Circle (07)</p></div>
+<div><img src="Circle_09.png" width="32" height="32" alt="brush sample"><p>Circle (09)</p></div>
+<div><img src="Circle_11.png" width="32" height="32" alt="brush sample"><p>Circle (11)</p></div>
+<div><img src="Circle_13.png" width="32" height="32" alt="brush sample"><p>Circle (13)</p></div>
+<div><img src="Circle_15.png" width="32" height="32" alt="brush sample"><p>Circle (15)</p></div>
+<div><img src="Circle_17.png" width="32" height="32" alt="brush sample"><p>Circle (17)</p></div>
+<div><img src="Circle_19.png" width="32" height="32" alt="brush sample"><p>Circle (19)</p></div>
+<div><img src="Circle_Fuzzy_03.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (03)</p></div>
+<div><img src="Circle_Fuzzy_05.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (05)</p></div>
+<div><img src="Circle_Fuzzy_07.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (07)</p></div>
+<div><img src="Circle_Fuzzy_09.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (09)</p></div>
+<div><img src="Circle_Fuzzy_11.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (11)</p></div>
+<div><img src="Circle_Fuzzy_13.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (13)</p></div>
+<div><img src="Circle_Fuzzy_15.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (15)</p></div>
+<div><img src="Circle_Fuzzy_17.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (17)</p></div>
+<div><img src="Circle_Fuzzy_19.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (19)</p></div>
+<div><img src="Confetti.png" width="32" height="32" alt="brush sample"><p>Confetti</p></div>
+<div><p>half way point</p></div>
+<div><img src="Diagonal_Star_11.png" width="32" height="32" alt="brush sample"><p>Diagonal Star (11)</p></div>
+<div><img src="Diagonal_Star_17.png" width="32" height="32" alt="brush sample"><p>Diagonal Star (17)</p></div>
+<div><img src="Diagonal_Star_25.png" width="32" height="32" alt="brush sample"><p>Diagonal Star (25)</p></div>
+<div><img src="Felt_Pen.png" width="32" height="32" alt="brush sample"><p>Felt Pen</p></div>
+<div><img src="GIMP_Brush.png" width="32" height="32" alt="brush sample"><p>GIMP Brush</p></div>
+<div><img src="Galaxy_AP.png" width="32" height="32" alt="brush sample"><p>Galaxy (AP)</p></div>
+<div><img src="Galaxy_Big.png" width="32" height="32" alt="brush sample"><p>Galaxy, Big</p></div>
+<div><img src="Galaxy_Small_AP.png" width="32" height="32" alt="brush sample"><p>Galaxy, Small (AP)</p></div>
+<div><img src="Pencil_Sketch.png" width="32" height="32" alt="brush sample"><p>Pencil Sketch</p></div>
+<div><img src="Pencil_Sketch2.png" width="32" height="32" alt="brush sample"><p>Pencil Sketch#2</p></div>
+<div><img src="Pencil_Sketch3.png" width="32" height="32" alt="brush sample"><p>Pencil Sketch#3</p></div>
+<div><img src="Pepper.png" width="32" height="32" alt="brush sample"><p>Pepper</p></div>
+<div><img src="Property_of_XCF!.png" width="32" height="32" alt="brush sample"><p>Property of XCF!</p></div>
+<div><img src="Sand_Dunes_AP.png" width="32" height="32" alt="brush sample"><p>Sand Dunes (AP)</p></div>
+<div><img src="Sparks.png" width="32" height="32" alt="brush sample"><p>Sparks</p></div>
+<div><img src="Vine.png" width="32" height="32" alt="brush sample"><p>Vine</p></div>
+<div><img src="animated_Confetti.png" width="32" height="32" alt="brush sample"><p>animated Confetti</p></div>
+<div><img src="pixel_1x1_square.png" width="32" height="32" alt="brush sample"><p>pixel (1x1 square)</p></div>
+<div><img src="square_10x10.png" width="32" height="32" alt="brush sample"><p>square (10x10)</p></div>
+<div><img src="square_10x10_blur.png" width="32" height="32" alt="brush sample"><p>square (10x10) blur</p></div>
+<div><img src="square_20x20.png" width="32" height="32" alt="brush sample"><p>square (20x20)</p></div>
+<div><img src="square_20x20_blur.png" width="32" height="32" alt="brush sample"><p>square (20x20) blur</p></div>
+<div><img src="square_5x5.png" width="32" height="32" alt="brush sample"><p>square (5x5)</p></div>
+<div><img src="square_5x5_blur.png" width="32" height="32" alt="brush sample"><p>square (5x5) blur</p></div>
+
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
