--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -6,56 +6,55 @@
 <div class="heading">Resources</div>
 <div class="subtitle">Included With The GIMP</div>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
-<div>this is the beginning</div>
-<div><img src="Calligraphic_Brush.png" width="32" height="32" alt="brush sample"><p>Calligraphic Brush</p></div>
-<div><img src="Calligraphic_Brush2.png" width="32" height="32" alt="brush sample"><p>Calligraphic Brush#2</p></div>
-<div><img src="Calligraphic_Brush3.png" width="32" height="32" alt="brush sample"><p>Calligraphic Brush#3</p></div>
-<div><img src="Calligraphic_Brush4.png" width="32" height="32" alt="brush sample"><p>Calligraphic Brush#4</p></div>
-<div><img src="Circle_01.png" width="32" height="32" alt="brush sample"><p>Circle (01)</p></div>
-<div><img src="Circle_03.png" width="32" height="32" alt="brush sample"><p>Circle (03)</p></div>
-<div><img src="Circle_05.png" width="32" height="32" alt="brush sample"><p>Circle (05)</p></div>
-<div><img src="Circle_07.png" width="32" height="32" alt="brush sample"><p>Circle (07)</p></div>
-<div><img src="Circle_09.png" width="32" height="32" alt="brush sample"><p>Circle (09)</p></div>
-<div><img src="Circle_11.png" width="32" height="32" alt="brush sample"><p>Circle (11)</p></div>
-<div><img src="Circle_13.png" width="32" height="32" alt="brush sample"><p>Circle (13)</p></div>
-<div><img src="Circle_15.png" width="32" height="32" alt="brush sample"><p>Circle (15)</p></div>
-<div><img src="Circle_17.png" width="32" height="32" alt="brush sample"><p>Circle (17)</p></div>
-<div><img src="Circle_19.png" width="32" height="32" alt="brush sample"><p>Circle (19)</p></div>
-<div><img src="Circle_Fuzzy_03.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (03)</p></div>
-<div><img src="Circle_Fuzzy_05.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (05)</p></div>
-<div><img src="Circle_Fuzzy_07.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (07)</p></div>
-<div><img src="Circle_Fuzzy_09.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (09)</p></div>
-<div><img src="Circle_Fuzzy_11.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (11)</p></div>
-<div><img src="Circle_Fuzzy_13.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (13)</p></div>
-<div><img src="Circle_Fuzzy_15.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (15)</p></div>
-<div><img src="Circle_Fuzzy_17.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (17)</p></div>
-<div><img src="Circle_Fuzzy_19.png" width="32" height="32" alt="brush sample"><p>Circle Fuzzy (19)</p></div>
-<div><img src="Confetti.png" width="32" height="32" alt="brush sample"><p>Confetti</p></div>
+<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush.png" width="32" height="32" alt="brush sample">Calligraphic Brush</p></div>
+<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush2.png" width="32" height="32" alt="brush sample">Calligraphic Brush#2</p></div>
+<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush3.png" width="32" height="32" alt="brush sample">Calligraphic Brush#3</p></div>
+<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush4.png" width="32" height="32" alt="brush sample">Calligraphic Brush#4</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_01.png" width="32" height="32" alt="brush sample">Circle (01)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_03.png" width="32" height="32" alt="brush sample">Circle (03)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_05.png" width="32" height="32" alt="brush sample">Circle (05)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_07.png" width="32" height="32" alt="brush sample">Circle (07)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_09.png" width="32" height="32" alt="brush sample">Circle (09)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_11.png" width="32" height="32" alt="brush sample">Circle (11)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_13.png" width="32" height="32" alt="brush sample">Circle (13)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_15.png" width="32" height="32" alt="brush sample">Circle (15)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_17.png" width="32" height="32" alt="brush sample">Circle (17)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_19.png" width="32" height="32" alt="brush sample">Circle (19)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_03.png" width="32" height="32" alt="brush sample">Circle Fuzzy (03)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_05.png" width="32" height="32" alt="brush sample">Circle Fuzzy (05)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_07.png" width="32" height="32" alt="brush sample">Circle Fuzzy (07)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_09.png" width="32" height="32" alt="brush sample">Circle Fuzzy (09)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_11.png" width="32" height="32" alt="brush sample">Circle Fuzzy (11)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_13.png" width="32" height="32" alt="brush sample">Circle Fuzzy (13)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_15.png" width="32" height="32" alt="brush sample">Circle Fuzzy (15)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_17.png" width="32" height="32" alt="brush sample">Circle Fuzzy (17)</p></div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_19.png" width="32" height="32" alt="brush sample">Circle Fuzzy (19)</p></div>
+<div><img style="vertical-align: text-middle;" src="Confetti.png" width="32" height="32" alt="brush sample">Confetti</p></div>
 <div><p>half way point</p></div>
-<div><img src="Diagonal_Star_11.png" width="32" height="32" alt="brush sample"><p>Diagonal Star (11)</p></div>
-<div><img src="Diagonal_Star_17.png" width="32" height="32" alt="brush sample"><p>Diagonal Star (17)</p></div>
-<div><img src="Diagonal_Star_25.png" width="32" height="32" alt="brush sample"><p>Diagonal Star (25)</p></div>
-<div><img src="Felt_Pen.png" width="32" height="32" alt="brush sample"><p>Felt Pen</p></div>
-<div><img src="GIMP_Brush.png" width="32" height="32" alt="brush sample"><p>GIMP Brush</p></div>
-<div><img src="Galaxy_AP.png" width="32" height="32" alt="brush sample"><p>Galaxy (AP)</p></div>
-<div><img src="Galaxy_Big.png" width="32" height="32" alt="brush sample"><p>Galaxy, Big</p></div>
-<div><img src="Galaxy_Small_AP.png" width="32" height="32" alt="brush sample"><p>Galaxy, Small (AP)</p></div>
-<div><img src="Pencil_Sketch.png" width="32" height="32" alt="brush sample"><p>Pencil Sketch</p></div>
-<div><img src="Pencil_Sketch2.png" width="32" height="32" alt="brush sample"><p>Pencil Sketch#2</p></div>
-<div><img src="Pencil_Sketch3.png" width="32" height="32" alt="brush sample"><p>Pencil Sketch#3</p></div>
-<div><img src="Pepper.png" width="32" height="32" alt="brush sample"><p>Pepper</p></div>
-<div><img src="Property_of_XCF!.png" width="32" height="32" alt="brush sample"><p>Property of XCF!</p></div>
-<div><img src="Sand_Dunes_AP.png" width="32" height="32" alt="brush sample"><p>Sand Dunes (AP)</p></div>
-<div><img src="Sparks.png" width="32" height="32" alt="brush sample"><p>Sparks</p></div>
-<div><img src="Vine.png" width="32" height="32" alt="brush sample"><p>Vine</p></div>
-<div><img src="animated_Confetti.png" width="32" height="32" alt="brush sample"><p>animated Confetti</p></div>
-<div><img src="pixel_1x1_square.png" width="32" height="32" alt="brush sample"><p>pixel (1x1 square)</p></div>
-<div><img src="square_10x10.png" width="32" height="32" alt="brush sample"><p>square (10x10)</p></div>
-<div><img src="square_10x10_blur.png" width="32" height="32" alt="brush sample"><p>square (10x10) blur</p></div>
-<div><img src="square_20x20.png" width="32" height="32" alt="brush sample"><p>square (20x20)</p></div>
-<div><img src="square_20x20_blur.png" width="32" height="32" alt="brush sample"><p>square (20x20) blur</p></div>
-<div><img src="square_5x5.png" width="32" height="32" alt="brush sample"><p>square (5x5)</p></div>
-<div><img src="square_5x5_blur.png" width="32" height="32" alt="brush sample"><p>square (5x5) blur</p></div>
+<div><img style="vertical-align: text-middle;" src="Diagonal_Star_11.png" width="32" height="32" alt="brush sample">Diagonal Star (11)</p></div>
+<div><img style="vertical-align: text-middle;" src="Diagonal_Star_17.png" width="32" height="32" alt="brush sample">Diagonal Star (17)</p></div>
+<div><img style="vertical-align: text-middle;" src="Diagonal_Star_25.png" width="32" height="32" alt="brush sample">Diagonal Star (25)</p></div>
+<div><img style="vertical-align: text-middle;" src="Felt_Pen.png" width="32" height="32" alt="brush sample">Felt Pen</p></div>
+<div><img style="vertical-align: text-middle;" src="GIMP_Brush.png" width="32" height="32" alt="brush sample">GIMP Brush</p></div>
+<div><img style="vertical-align: text-middle;" src="Galaxy_AP.png" width="32" height="32" alt="brush sample">Galaxy (AP)</p></div>
+<div><img style="vertical-align: text-middle;" src="Galaxy_Big.png" width="32" height="32" alt="brush sample">Galaxy, Big</p></div>
+<div><img style="vertical-align: text-middle;" src="Galaxy_Small_AP.png" width="32" height="32" alt="brush sample">Galaxy, Small (AP)</p></div>
+<div><img style="vertical-align: text-middle;" src="Pencil_Sketch.png" width="32" height="32" alt="brush sample">Pencil Sketch</p></div>
+<div><img style="vertical-align: text-middle;" src="Pencil_Sketch2.png" width="32" height="32" alt="brush sample">Pencil Sketch#2</p></div>
+<div><img style="vertical-align: text-middle;" src="Pencil_Sketch3.png" width="32" height="32" alt="brush sample">Pencil Sketch#3</p></div>
+<div><img style="vertical-align: text-middle;" src="Pepper.png" width="32" height="32" alt="brush sample">Pepper</p></div>
+<div><img style="vertical-align: text-middle;" src="Property_of_XCF!.png" width="32" height="32" alt="brush sample">Property of XCF!</p></div>
+<div><img style="vertical-align: text-middle;" src="Sand_Dunes_AP.png" width="32" height="32" alt="brush sample">Sand Dunes (AP)</p></div>
+<div><img style="vertical-align: text-middle;" src="Sparks.png" width="32" height="32" alt="brush sample">Sparks</p></div>
+<div><img style="vertical-align: text-middle;" src="Vine.png" width="32" height="32" alt="brush sample">Vine</p></div>
+<div><img style="vertical-align: text-middle;" src="animated_Confetti.png" width="32" height="32" alt="brush sample">animated Confetti</p></div>
+<div><img style="vertical-align: text-middle;" src="pixel_1x1_square.png" width="32" height="32" alt="brush sample">pixel (1x1 square)</p></div>
+<div><img style="vertical-align: text-middle;" src="square_10x10.png" width="32" height="32" alt="brush sample">square (10x10)</p></div>
+<div><img style="vertical-align: text-middle;" src="square_10x10_blur.png" width="32" height="32" alt="brush sample">square (10x10) blur</p></div>
+<div><img style="vertical-align: text-middle;" src="square_20x20.png" width="32" height="32" alt="brush sample">square (20x20)</p></div>
+<div><img style="vertical-align: text-middle;" src="square_20x20_blur.png" width="32" height="32" alt="brush sample">square (20x20) blur</p></div>
+<div><img style="vertical-align: text-middle;" src="square_5x5.png" width="32" height="32" alt="brush sample">square (5x5)</p></div>
+<div><img style="vertical-align: text-middle;" src="square_5x5_blur.png" width="32" height="32" alt="brush sample">square (5x5) blur</p></div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
